--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
             <ul class="nav-content">
-              <label class="switch" class="nav-content">
+              <label class="switch" >
               <input onclick="myFunction()" type="checkbox" checked>
               <span class="slider round"></span>
             </label>
@@ -23,18 +23,6 @@
                     <a href="#" class="link-item">
                         <i class='bx bxs-caret-right-square link-icon'></i>
                         <span class="link-text">Content</span>
-                    </a>
-                </li>
-                <li class="nav-list">
-                    <a href="#" class="link-item">
-                        <i class='bx bxs-bar-chart-square link-icon'></i>
-                        <span class="link-text">Analytics</span>
-                    </a>
-                </li>
-                <li class="nav-list">
-                    <a href="#" class="link-item">
-                        <i class='bx bxs-message-rounded link-icon'></i>
-                        <span class="link-text">Comments</span>
                     </a>
                 </li>
                 <li class="nav-list">
