--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="css/switchTheme.css">
+<link rel="stylesheet" href="css/body.css">
+<link rel="stylesheet" href="css/rectangle.css">
 <link rel="stylesheet" href="css/menuBar.css">
-        <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 <title>Ghayth Sabeaallil</title>
 </head>
 <body>
             <ul class="nav-content">
-              <label class="switch" >
-              <input onclick="myFunction()" type="checkbox" checked>
-              <span class="slider round"></span>
-            </label>
                 <li class="nav-list">
                     <a href="#" class="link-item active">
                         <i class='bx bxs-home link-icon'></i>
@@ -32,6 +29,7 @@
                     </a>
                 </li>
             </ul>
+            <div id="rectangle"></div>
  <script src="js/darkSwitch.js"></script>
 </body>
 </html>
