animation and position

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </a>
                 </li>
             </ul>
-            <div id="rectangle"></div>
+            <div id="rectangle"><img src="img/animation.svg" /></div>
  <script src="js/darkSwitch.js"></script>
 </body>
 </html>
