--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="css/body.css">
 <link rel="stylesheet" href="css/rectangle.css">
 <link rel="stylesheet" href="css/menuBar.css">
+<link rel="stylesheet" href="css/a.css">
+
 <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 <title>Ghayth Sabeaallil</title>
 </head>
@@ -29,7 +32,14 @@
                     </a>
                 </li>
             </ul>
-            <div id="rectangle"><img src="img/animation.svg" /></div>
+            <div id="Rectangle_Right"><p>
+Ghayth Sabeaallil 25 years old and live in sweden Ghayth Sabeaallil 25 years old and live in sweden
+Ghayth Sabeaallil 25 years old and live in sweden
+Ghayth Sabeaallil 25 years old and live in sweden
+</p>
+</div>
+
+
  <script src="js/darkSwitch.js"></script>
 </body>
 </html>
