--- a/index.html
+++ b/index.html
@@ -5,41 +5,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="css/body.css">
 <link rel="stylesheet" href="css/rectangle.css">
-<link rel="stylesheet" href="css/menuBar.css">
 <link rel="stylesheet" href="css/a.css">
 
 <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 <title>Ghayth Sabeaallil</title>
 </head>
 <body>
-            <ul class="nav-content">
-                <li class="nav-list">
-                    <a href="#" class="link-item active">
-                        <i class='bx bxs-home link-icon'></i>
-                        <span class="link-text">Home</span>
-                    </a>
-                </li>
-                <li class="nav-list">
-                    <a href="#" class="link-item">
-                        <i class='bx bxs-caret-right-square link-icon'></i>
-                        <span class="link-text">Content</span>
-                    </a>
-                </li>
-                <li class="nav-list">
-                    <a href="#" class="link-item">
-                        <i class='bx bxs-user link-icon'></i>
-                        <span class="link-text">Profile</span>
-                    </a>
-                </li>
-            </ul>
-            <div id="Rectangle_Right"><p>
-Ghayth Sabeaallil 25 years old and live in sweden Ghayth Sabeaallil 25 years old and live in sweden
-Ghayth Sabeaallil 25 years old and live in sweden
-Ghayth Sabeaallil 25 years old and live in sweden
-</p>
-</div>
+<div id="Rectangle_Right_Up"><p>Welcome to my codepen profile</p></div>
+</br>
+<div id="Rectangle_Right_Middle"><p>Welcome to my codepen profile</p></div>
+</br>
+<div id="Rectangle_Right_Down"><p>Welcome to my codepen profile</p></div>
 
 
- <script src="js/darkSwitch.js"></script>
+
+
+<script src="js/darkSwitch.js"></script>
 </body>
 </html>
