Change the text animation

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="shortcut icon" type="image/x-icon" href="img/icon.png" />
 <link rel="stylesheet" href="css/body.css">
-<link rel="stylesheet" href="css/rectangle.css">
-<link rel="stylesheet" href="css/a.css">
+<link rel="stylesheet" href="css/textAnimation.css">
 
 <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 <title>Ghayth Sabeaallil</title>
 </head>
 <body>
-<div id="Rectangle_Right_Up"><p>Welcome to my codepen profile</p></div>
-</br>
-<div id="Rectangle_Right_Middle"><p>Welcome to my codepen profile</p></div>
-</br>
-<div id="Rectangle_Right_Down"><p>Welcome to my codepen profile</p></div>
+<div class="container">
+<p>Hello every one. And Welcome to my website</p>
+
+
+</div>
 
 
 
