fix the bg and the trerminal of mac ios

--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" type="image/x-icon" href="img/icon.png" />
 <link rel="stylesheet" href="css/body.css">
+<link rel="stylesheet" href="css/rectangle.css">
 <link rel="stylesheet" href="css/textAnimation.css">
 
-<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 <title>Ghayth Sabeaallil</title>
 </head>
 <body>
-<div class="container">
-<p>Hello every one. And Welcome to my website ...</p>
-
+<div class="rectangle">
+  <div class="rectangle_top">
+    <div class="circle_close"></div>
+    <div class="circle_minimize"></div>
+    <div class="circle_expand"></div>
+  </div>
 </div>
-
-
-
-
 <script src="js/darkSwitch.js"></script>
 </body>
 </html>
