fix the terminal and the text style

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" type="image/x-icon" href="img/icon.png" />
 <link rel="stylesheet" href="css/body.css">
-<link rel="stylesheet" href="css/rectangle.css">
-<link rel="stylesheet" href="css/textAnimation.css">
+<link rel="stylesheet" href="css/style.css">
 
 <title>Ghayth Sabeaallil</title>
 </head>
@@ -16,9 +15,13 @@
     <div class="circle_close"></div>
     <div class="circle_minimize"></div>
     <div class="circle_expand"></div>
-  </div>
-  
 </div>
+    <p>Welcome to the personal-terminal website. This website works by commands.</p>
+    <p>Copyright (c) 2023, Ghayth Sabeaallil</p>
+    <p>Type 'help' or 'h' for help and see all commands.</p>
+    <p>Ghayth@GhaythSabeaallil-website-2023:~$<input class="inputText" type="text"></p>
+
+  </div>
 <script src="js/darkSwitch.js"></script>
 </body>
 </html>
