fix the terminal and the text style

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <p>Welcome to the personal-terminal website. This website works by commands.</p>
     <p>Copyright (c) 2023, Ghayth Sabeaallil</p>
     <p>Type 'help' or 'h' for help and see all commands.</p>
-    <p>Ghayth@GhaythSabeaallil-website-2023:~$<input class="inputText" type="text"></p>
-
+    <p>Ghayth@GhaythSabeaallil-website-2023:~$</p><input class="inputText">
   </div>
-<script src="js/darkSwitch.js"></script>
 </body>
 </html>
